styles/scss/vtex.rich-text.scss
@import "./references";

// FOOTER

.container--payment-methods {
  width: 100%;
  margin-bottom: 1em;
  :first-child {
    margin: 0 auto;
    .paragraph--payment-methods {
      font-size: 10px;
    }
  }
}

.paragraph--top-bar-link{
  margin: 0;
}

.container--top-bar-link {

  font-weight: 700;
  cursor: pointer;

  @media screen and (max-width: 768px) {
    justify-content: center;
  }
}

.container--top-bar-link-1 {
  margin-right: 4px;
  padding: 4px 37px;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
  color: #fff;
}

.container--top-bar-link-1 {
  background: #ed1d25;
}

.container--top-bar-link-2 {
  background: #ffd500;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;

  .wrapper--top-bar-link-2 {
    width: 100%;
  }

  .link--top-bar-link {
    padding: 4px 37px;
    display: flex;
    justify-content: center;
    color: #ed1d25;
    text-decoration: none;
    cursor: pointer;
  }
}

.paragraph--option-whole {
  margin: 0;
}
.paragraph--order-by-text {
  white-space: nowrap;
  margin: 0 10px;
  font-size: 14px;
}
.paragraph--slider-search-text {
  font-size: 26px;
  font-weight: bold;
  color: #525252;
  margin-left: 10px;
  @media screen and (max-width: 768px) {
    font-size: 18px;
  }
}
.strong--how-to-buy {
  display: inline !important;
}
.paragraph--faq-title {
  font-size: 24px;
  color: #525252;
  font-weight: bold;
  margin-bottom: 0;
}
/* ... */

